--- a/html-css/module-5/index.html
+++ b/html-css/module-5/index.html
@@ -1,29 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./css/normalize.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300i,400,600,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
     <title>hw-module-5</title>
 </head>
+
 <body>
     <div class="container">
-    <header class="page-header">
-        <nav class="clearfix">
-            <a href="#" class="logo">Mart</a>
-            <ul class="site-navigation clearfix">
-                <li><a class="main-menu-link" href="#">Home</a></li>
-                <li><a class="main-menu-link" href="#">About Us</a></li>
-                <li><a class="main-menu-link" href="#">Page</a></li>
-                <li><a class="main-menu-link" href="#">Shop</a></li>
-                <li><a class="main-menu-link" href="#">Blog</a></li>
-                <li><a class="main-menu-link" href="#">Contact Us</a></li>
+        <header class="page-header">
+            <nav class="clearfix">
+                <a href="#" class="logo">Mart</a>
+                <ul class="site-navigation clearfix">
+                    <li><a class="main-menu-link" href="#">Home</a></li>
+                    <li><a class="main-menu-link" href="#">About Us</a></li>
+                    <li><a class="main-menu-link" href="#">Page</a></li>
+                    <li><a class="main-menu-link" href="#">Shop</a></li>
+                    <li><a class="main-menu-link" href="#">Blog</a></li>
+                    <li><a class="main-menu-link" href="#">Contact Us</a></li>
+                </ul>
+            </nav>
+        </header>
+    </div>
+    <main>
+        <section class="slider">
+            <img class="site-background" src="img/background-pic-light.jpg" width="1600px" height="600px" alt="tours-pic">
+            <div class="titles container">
+                <h1 class="slider-title">Affordable paris tours</h1>
+                <p class="slider-subtitle">City / tours / tour ticket / tour gide</p>
+            </div>
+
+        </section>
+        <section class="products container">
+            <h2 class="product-title">New collection</h2>
+            <ul class="product-list clearfix">
+                <li class="product-list-item"><a href="#">
+                        <img class="product-list-img" src="img/blue-tshirt-pic.jpg" alt="blue-tshirt" width="254"
+                            height="322">
+                        <div class="card-bottom">
+                            <p class="text">Blue Tshirt</p>
+                            <p class="price">$26</p>
+                        </div>
+                    </a>
+                </li>
+                <li class="product-list-item"><a href="#">
+                        <img class="product-list-img" src="img/woman-tshirt-pic.jpg" alt="blue-tshirt" width="254"
+                            height="322">
+                        <div class="card-bottom">
+                            <p class="text">Blue Tshirt</p>
+                            <p class="price">$31</p>
+                        </div>
+                    </a>
+                </li>
+                <li class="product-list-item"><a href="#">
+                        <img class="product-list-img" src="img/yellow-tshirt-pic.jpg" alt="blue-tshirt" width="254"
+                            height="322">
+                        <div class="card-bottom">
+                            <p class="text">Blue Tshirt</p>
+                            <p class="price">$21</p>
+                        </div>
+                    </a>
+                </li>
+                <li class="product-list-item"><a href="#">
+                        <img class="product-list-img" src="img/cool-lingerie-pic.jpg" alt="blue-tshirt" width="254"
+                            height="322">
+                        <div class="card-bottom">
+                            <p class="text">Blue Tshirt</p>
+                            <p class="price">$56</p>
+                        </div>
+                    </a>
+                </li>
             </ul>
-        </nav>
-    </header>
-</div>
-<div class="main-section"></div>
+        </section>
+
+    </main>
+    <footer class="footer">
+       <p>All Rights Reserved © Dokan | Designed ThemenGraph</p>
+    </footer>
 </body>
+
 </html>
