--- a/html-css/module-5/index.html
+++ b/html-css/module-5/index.html
@@ -35,14 +35,14 @@
                 <h1 class="slider-title">Affordable paris tours</h1>
                 <p class="slider-subtitle">City / tours / tour ticket / tour gide</p>
             </div>
-
-        </section>
+            </section>
         <section class="products container">
             <h2 class="product-title">New collection</h2>
             <ul class="product-list clearfix">
                 <li class="product-list-item"><a href="#">
+                    
                         <img class="product-list-img" src="img/blue-tshirt-pic.jpg" alt="blue-tshirt" width="254"
-                            height="322">
+                            height="322px">
                         <div class="card-bottom">
                             <p class="text">Blue Tshirt</p>
                             <p class="price">$26</p>
