--- a/html-css/module-5/index.html
+++ b/html-css/module-5/index.html
@@ -30,24 +30,46 @@
     </div>
     <main>
         <section class="slider">
-            <img class="site-background" src="img/background-pic-light.jpg" width="1600px" height="600px" alt="tours-pic">
-            <div class="titles container">
-                <h1 class="slider-title">Affordable paris tours</h1>
-                <p class="slider-subtitle">City / tours / tour ticket / tour gide</p>
+            <img class="site-background" src="img/background-pic-light.jpg" width="100%" height="100%" alt="tours-pic">
+
+            <div class="slider-btns container">
+                <button class="slider-btn prev"></button>
+                <button class="slider-btn next"></button>
+                <div class="titles">
+                    <h1 class="slider-title">Affordable paris tours</h1>
+                    <p class="slider-subtitle">City / tours / tour ticket / tour gide</p>
+
+                </div>
             </div>
-            </section>
+        </section>
         <section class="products container">
             <h2 class="product-title">New collection</h2>
             <ul class="product-list clearfix">
-                <li class="product-list-item"><a href="#">
-                    
-                        <img class="product-list-img" src="img/blue-tshirt-pic.jpg" alt="blue-tshirt" width="254"
-                            height="322px">
-                        <div class="card-bottom">
-                            <p class="text">Blue Tshirt</p>
-                            <p class="price">$26</p>
+                <li class="product-list-item">
+                        <div class="card">
+                            <img class="product-list-img" src="img/blue-tshirt-pic.jpg" alt="blue-tshirt" width="254"
+                                height="322px">
+                            <div class="overlay">
+                                <ul class="card-list clearfix">
+                                    <li class="card-list-item">
+                                        <a href="#" class="card-list-link"></a>
+                                    </li>
+                                    <li class="card-list-item">
+                                        <a href="#" class="card-list-link"></a>
+                                    </li>
+                                    <li class="card-list-item">
+                                        <a href="#" class="card-list-link"></a>
+                                    </li>
+                                    <li class="card-list-item">
+                                        <a href="#" class="card-list-link"></a>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
-                    </a>
+                        <div class="card-bottom clearfix">
+                           <h3 class="text"><a class="text-link" href="#">Blue Tshirt</a></h3>
+                            <span class="price">$26</span>
+                        </div>   
                 </li>
                 <li class="product-list-item"><a href="#">
                         <img class="product-list-img" src="img/woman-tshirt-pic.jpg" alt="blue-tshirt" width="254"
@@ -80,8 +102,11 @@
         </section>
 
     </main>
-    <footer class="footer">
-       <p>All Rights Reserved © Dokan | Designed ThemenGraph</p>
+    <footer>
+        <div class="footer">
+            <span class="text">All Rights Reserved © Dokan | Designed</span>
+            <a href="#" class="author-name">ThemenGraph</a>
+        </div>
     </footer>
 </body>
 
