--- a/html-css/module-5/index.html
+++ b/html-css/module-5/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/normalize.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300i,400,600,700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:900,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>hw-module-5</title>
 </head>
@@ -31,24 +31,24 @@
     <main>
         <section class="slider">
             <img class="site-background" src="img/background-pic-light.jpg" width="100%" height="100%" alt="tours-pic">
-
             <div class="slider-btns container">
                 <button class="slider-btn prev"></button>
                 <button class="slider-btn next"></button>
-                <div class="titles">
-                    <h1 class="slider-title">Affordable paris tours</h1>
-                    <p class="slider-subtitle">City / tours / tour ticket / tour gide</p>
-
-                </div>
+                <ul class="slider-carousel">
+                    <li class="slider-carousel-item">
+                        <h2 class="slider-title">Affordable paris tours</h2>
+                        <p class="slider-subtitle">City / tours / tour ticket / tour gide</p>
+                    </li>
+                </ul>
             </div>
         </section>
-        <section class="products container">
-            <h2 class="product-title">New collection</h2>
-            <ul class="product-list clearfix">
-                <li class="product-list-item">
-                        <div class="card">
-                            <img class="product-list-img" src="img/blue-tshirt-pic.jpg" alt="blue-tshirt" width="254"
-                                height="322px">
+        <section class="products">
+            <div class="collection container">
+                <h2 class="product-title">New collection</h2>
+                <ul class="product-list clearfix">
+                    <li class="product-list-item">
+                        <div class="wraper-img">
+                            <img class="product-list-img" src="img/blue-tshirt-pic.jpg" alt="blue-tshirt" width="254" height="322">
                             <div class="overlay">
                                 <ul class="card-list clearfix">
                                     <li class="card-list-item">
@@ -61,51 +61,110 @@
                                         <a href="#" class="card-list-link"></a>
                                     </li>
                                     <li class="card-list-item">
-                                        <a href="#" class="card-list-link"></a>
+                                        <a href="#" class="card-list-link">
+                                            <span class="cart">add to cart</span>
+                                        </a>
                                     </li>
                                 </ul>
                             </div>
                         </div>
                         <div class="card-bottom clearfix">
-                           <h3 class="text"><a class="text-link" href="#">Blue Tshirt</a></h3>
+                            <h3 class="text"><a class="text-link" href="#">Blue Tshirt</a></h3>
                             <span class="price">$26</span>
-                        </div>   
-                </li>
-                <li class="product-list-item"><a href="#">
-                        <img class="product-list-img" src="img/woman-tshirt-pic.jpg" alt="blue-tshirt" width="254"
-                            height="322">
-                        <div class="card-bottom">
-                            <p class="text">Blue Tshirt</p>
-                            <p class="price">$31</p>
                         </div>
-                    </a>
-                </li>
-                <li class="product-list-item"><a href="#">
-                        <img class="product-list-img" src="img/yellow-tshirt-pic.jpg" alt="blue-tshirt" width="254"
-                            height="322">
-                        <div class="card-bottom">
-                            <p class="text">Blue Tshirt</p>
-                            <p class="price">$21</p>
+                    </li>
+                    <li class="product-list-item">
+                        <div class="wraper-img">
+                            <img class="product-list-img" src="img/woman-tshirt-pic.jpg" alt="blue-tshirt" width="254" height="322">
+                            <div class="overlay">
+                                <ul class="card-list clearfix">
+                                    <li class="card-list-item">
+                                        <a href="#" class="card-list-link"></a>
+                                    </li>
+                                    <li class="card-list-item">
+                                        <a href="#" class="card-list-link"></a>
+                                    </li>
+                                    <li class="card-list-item">
+                                        <a href="#" class="card-list-link"></a>
+                                    </li>
+                                    <li class="card-list-item">
+                                        <a href="#" class="card-list-link">
+                                            <span class="cart">add to cart</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
-                    </a>
-                </li>
-                <li class="product-list-item"><a href="#">
-                        <img class="product-list-img" src="img/cool-lingerie-pic.jpg" alt="blue-tshirt" width="254"
-                            height="322">
-                        <div class="card-bottom">
-                            <p class="text">Blue Tshirt</p>
-                            <p class="price">$56</p>
+                        <div class="card-bottom clearfix">
+                            <h3 class="text"><a class="text-link" href="#">Blue Tshirt</a></h3>
+                            <span class="price">$26</span>
                         </div>
-                    </a>
-                </li>
-            </ul>
+                    </li>
+                    <li class="product-list-item">
+                        <div class="wraper-img">
+                            <img class="product-list-img" src="img/yellow-tshirt-pic.jpg" alt="blue-tshirt" width="254" height="322">
+                            <div class="overlay">
+                                <ul class="card-list clearfix">
+                                    <li class="card-list-item">
+                                        <a href="#" class="card-list-link"></a>
+                                    </li>
+                                    <li class="card-list-item">
+                                        <a href="#" class="card-list-link"></a>
+                                    </li>
+                                    <li class="card-list-item">
+                                        <a href="#" class="card-list-link"></a>
+                                    </li>
+                                    <li class="card-list-item">
+                                        <a href="#" class="card-list-link">
+                                            <span class="cart">add to cart</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="card-bottom clearfix">
+                            <h3 class="text"><a class="text-link" href="#">Blue Tshirt</a></h3>
+                            <span class="price">$26</span>
+                        </div>
+                    </li>
+                    <li class="product-list-item">
+                        <div class="wraper-img">
+                            <img class="product-list-img" src="img/cool-lingerie-pic.jpg" alt="blue-tshirt" width="254" height="322">
+                            <div class="overlay">
+                                <ul class="card-list clearfix">
+                                    <li class="card-list-item">
+                                        <a href="#" class="card-list-link"></a>
+                                    </li>
+                                    <li class="card-list-item">
+                                        <a href="#" class="card-list-link"></a>
+                                    </li>
+                                    <li class="card-list-item">
+                                        <a href="#" class="card-list-link"></a>
+                                    </li>
+                                    <li class="card-list-item">
+                                        <a href="#" class="card-list-link">
+                                            <span class="cart">add to cart</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="card-bottom clearfix">
+                            <h3 class="text"><a class="text-link" href="#">Blue Tshirt</a></h3>
+                            <span class="price">$26</span>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </section>
 
     </main>
     <footer>
         <div class="footer">
-            <span class="text">All Rights Reserved © Dokan | Designed</span>
-            <a href="#" class="author-name">ThemenGraph</a>
+            <p class="footer-text">
+                All Rights Reserved © Dokan | Designed
+                <a href="#" class="author-name-link">ThemenGraph</a>
+            </p>
         </div>
     </footer>
 </body>
