fexed centre and footer

--- a/html-css/module-5/index.html
+++ b/html-css/module-5/index.html
@@ -29,19 +29,20 @@
         </header>
     </div>
     <main>
-        <section class="slider">
-            <img class="site-background" src="img/background-pic-light.jpg" width="100%" height="100%" alt="tours-pic">
-            <div class="slider-btns container">
-                <button class="slider-btn prev"></button>
-                <button class="slider-btn next"></button>
-                <ul class="slider-carousel">
-                    <li class="slider-carousel-item">
-                        <h2 class="slider-title">Affordable paris tours</h2>
-                        <p class="slider-subtitle">City / tours / tour ticket / tour gide</p>
-                    </li>
-                </ul>
-            </div>
-        </section>
+            <section class="slider">
+                    <div class="slider-wrapper">
+                      <button class="slider-control prev"></button>
+                      <button class="slider-control next"></button>
+                      <ul class="slider-carousel">
+                        <li class="slider-carousel-item">
+                          <h2 class="slider-title">Affordable Paris Tours</h2>
+                          <p class="slider-text">
+                            City tours/Tour ticket/Tour guides
+                          </p>
+                        </li>
+                      </ul>
+                    </div>
+                  </section>
         <section class="products">
             <div class="collection container">
                 <h2 class="product-title">New collection</h2>
