--- a/html-css/module-6/index.html
+++ b/html-css/module-6/index.html
@@ -1,37 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat:400,700|Roboto:400,700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat:300,400,500,600,700|Roboto:300i,300,400,500,700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <title>Module-6</title>
 </head>
 
 <body>
-    <header class="header container">
-        <nav class="navigation">
-        <a class="logo" href="#">MoGo</a>
-        <ul class="header-list">
-            <li class="heder-list-item">
-                <a href="#" class="header-list-link">About</a>
-            </li>
-            <li class="heder-list-item">
-                <a href="#" class="header-list-link">Service</a>
-            </li>
-            <li class="heder-list-item">
-                <a href="#" class="header-list-link">Work</a>
-            </li>
-            <li class="heder-list-item">
-                <a href="#" class="header-list-link">Blog</a>
-            </li>
-            <li class="heder-list-item">
-                <a href="#" class="header-list-link">Contact</a>
-            </li>
-        </ul>
-        </nav>
+    <header class="header">
+        <div class="container">
+            <nav class="navigation">
+                <a href="#" class="logo">MoGo</a>
+                <ul class="nav-list">
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Service</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Work</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Blog</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </header>
+    <main>
+        <section class="services">
+            <div class="container">
+                <p class="section-subtitle">We work with</p>
+                <h2 class="section-title">Amazing services</h2>
+                <ul class="services-list">
+                    <li class="services-list-item">
+                        <h3 class="services-list-item-title">Photography</h3>
+                        <p class="services-list-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                            do eiusmod
+                            tempor.t</p>
+                    </li>
+                    <li class="services-list-item">
+                        <h3 class="services-list-item-title">Web design</h3>
+                        <p class="services-list-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                            do eiusmod
+                            tempor.t</p>
+                    </li>
+                    <li class="services-list-item">
+                        <h3 class="services-list-item-title">Creativity</h3>
+                        <p class="services-list-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                            do eiusmod
+                            tempor.t</p>
+                    </li>
+                    <li class="services-list-item">
+                        <h3 class="services-list-item-title">Seo</h3>
+                        <p class="services-list-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                            do eiusmod
+                            tempor.t</p>
+                    </li>
+                    <li class="services-list-item">
+                        <h3 class="services-list-item-title">css/html</h3>
+                        <p class="services-list-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                            do eiusmod
+                            tempor.t</p>
+                    </li>
+                    <li class="services-list-item">
+                        <h3 class="services-list-item-title">Ditital</h3>
+                        <p class="services-list-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                            do eiusmod
+                            tempor.t</p>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="team">
+            <div class="container">
+                <p class="section-subtitle">Who we are</p>
+                <h2 class="section-title">Meet our team</h2>
+                <p class="team-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                    incididunt
+                    ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                    nisi ut
+                    aliquip ex ea commodo consequat.</p>
+                <ul class="team-list">
+                    
+                </ul>
+            </div>
+        </section>
+    </main>
 </body>
+
 </html>
