--- a/html-css/module-6/index.html
+++ b/html-css/module-6/index.html
@@ -38,7 +38,7 @@
             </nav>
         </div>
     </header>
-    <main>
+    <main class="main">
         <section class="services">
             <div class="container">
                 <p class="section-subtitle">We work with</p>
@@ -48,56 +48,127 @@
                         <h3 class="services-list-item-title">Photography</h3>
                         <p class="services-list-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                             do eiusmod
-                            tempor.t</p>
+                            tempor.</p>
                     </li>
                     <li class="services-list-item">
                         <h3 class="services-list-item-title">Web design</h3>
                         <p class="services-list-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                             do eiusmod
-                            tempor.t</p>
+                            tempor.</p>
                     </li>
                     <li class="services-list-item">
                         <h3 class="services-list-item-title">Creativity</h3>
                         <p class="services-list-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                             do eiusmod
-                            tempor.t</p>
+                            tempor.</p>
                     </li>
                     <li class="services-list-item">
                         <h3 class="services-list-item-title">Seo</h3>
                         <p class="services-list-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                             do eiusmod
-                            tempor.t</p>
+                            tempor.</p>
                     </li>
                     <li class="services-list-item">
                         <h3 class="services-list-item-title">css/html</h3>
                         <p class="services-list-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                             do eiusmod
-                            tempor.t</p>
+                            tempor.</p>
                     </li>
                     <li class="services-list-item">
                         <h3 class="services-list-item-title">Ditital</h3>
                         <p class="services-list-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                             do eiusmod
-                            tempor.t</p>
+                            tempor.</p>
                     </li>
                 </ul>
             </div>
         </section>
-        <section class="team">
+        <section class="section-team">
             <div class="container">
                 <p class="section-subtitle">Who we are</p>
-                <h2 class="section-title">Meet our team</h2>
+                <h2 class="section-title line2">Meet our team</h2>
                 <p class="team-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                     incididunt
                     ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
                     nisi ut
                     aliquip ex ea commodo consequat.</p>
                 <ul class="team-list">
-                    
+                    <li class="social-item">
+                    <img src="/img/pictures/Rectangle-1.jpg" alt="Photo1" width="380" height="470">
+                    <span class="team-name">Matthew Dix</span>
+                    <span class="team-position">Graphic Design</span>
+                    <div class="team-card">
+                        <ul class="social-list">
+                            <li class="social-item">
+                                <a href="" class="social-link"><img src="img/icons/facebook-1.png" alt="Fb" class="social-img"></a>
+                            </li>
+                            <li class="social-item">
+                                <a href="" class="social-link"><img src="img/icons/twitter-2.png" alt="Tw" class="social-img"></a>
+                            </li>
+                            <li class="social-item">
+                                <a href="" class="social-link"><img src="img/icons/pinterest-3.png" alt="Pnt" class="social-img"></a>
+                            </li>
+                            <li class="social-item">
+                                <a href="" class="social-link"><img src="img/icons/instagram-4.png" alt="Ins" class="social-img"></a>
+                            </li>
+                        </ul>
+                    </div>
+                    </li>
+                    <li class="social-item">
+                        <img src="/img/pictures/camera-2.jpg" alt="Photo1" width="380" height="470">
+                    <span class="team-name">Matthew Dix</span>
+                    <span class="team-position">Graphic Design</span>
+                    <div class="team-card">
+                        <ul class="social-list">
+                            <li class="social-item">
+                                <a href="" class="social-link"><img src="img/icons/facebook-1.png" alt="Fb" class="social-img"></a>
+                            </li>
+                            <li class="social-item">
+                                <a href="" class="social-link"><img src="img/icons/twitter-2.png" alt="Tw" class="social-img"></a>
+                            </li>
+                            <li class="social-item">
+                                <a href="" class="social-link"><img src="img/icons/pinterest-3.png" alt="Pnt" class="social-img"></a>
+                            </li>
+                            <li class="social-item">
+                                <a href="" class="social-link"><img src="img/icons/instagram-4.png" alt="Ins" class="social-img"></a>
+                            </li>
+                        </ul>
+                    </div>
+                    </li>
+                    <li class="social-item">
+                        <img src="/img/pictures/Rectangle-1.jpg" alt="Photo1" width="380" height="470">
+                    <span class="team-name">Matthew Dix</span>
+                    <span class="team-position">Graphic Design</span>
+                    <div class="team-card">
+                        <ul class="social-list">
+                            <li class="social-item">
+                                <a href="" class="social-link"><img src="img/icons/facebook-1.png" alt="Fb" class="social-img"></a>
+                            </li>
+                            <li class="social-item">
+                                <a href="" class="social-link"><img src="img/icons/twitter-2.png" alt="Tw" class="social-img"></a>
+                            </li>
+                            <li class="social-item">
+                                <a href="" class="social-link"><img src="img/icons/pinterest-3.png" alt="Pnt" class="social-img"></a>
+                            </li>
+                            <li class="social-item">
+                                <a href="" class="social-link"><img src="img/icons/instagram-4.png" alt="Ins" class="social-img"></a>
+                            </li>
+                        </ul>
+                    </div>
+                    </li>
                 </ul>
             </div>
         </section>
     </main>
-</body>
+    <footer class="footer container">
+        <p class="copyright">&copy; 2016 MoGo free PSD template by <a href="" class="copyright-link">GoIT</a></p>
 
+        <form action="#" class="email-form">
+            <input class="email" type="email" name="email" placeholder="Your Email...">
+            <input class="submit" type="submit" value="Subscribe">
+          </form>
+    </footer>
+</body>
 </html>
+
+
